# notifications_sprint_1

./: README.md  test
backend/apps/email_admin/: .env.example  pyproject.toml
backend/apps/email_admin/email_admin/: main.py
backend/apps/email_admin/email_admin/configs/: jinja2.py  kafka.py  mongo.py  settings.py
backend/apps/email_admin/email_admin/managers/: dependencies.py  schemas.py  services.py
backend/apps/email_admin/email_admin/managers/api/v1/: routers.py
backend/apps/email_admin/email_admin/utils/: authorization.py  dependencies.py
backend/apps/email_aggregator/: .env.example  README.md  pyproject.toml
backend/apps/email_aggregator/email_aggregator/: main.py
backend/apps/email_aggregator/email_aggregator/aggregation/: clickhouse_aggregators.py  clickhouse_utils.py  kafka_utils.py
backend/apps/email_aggregator/email_aggregator/commands/: aggregate_views.py
backend/apps/email_aggregator/email_aggregator/settings/: app.py  clickhouse.py  kafka.py  service.py
backend/apps/email_worker/: .env.example  README.md  pyproject.toml
backend/apps/email_worker/email_worker/: main.py
backend/apps/email_worker/email_worker/api/v1/: api.py
backend/apps/email_worker/email_worker/configs/: jinja2.py  settings.py  smpt.py
backend/apps/email_worker/email_worker/email_builders/: interface.py  welcome_builder.py
backend/apps/email_worker/email_worker/email_senders/: interface.py  sender.py
backend/apps/email_worker/email_worker/schemas/: events.py  user.py
backend/apps/email_worker/email_worker/services/: common.py  interface.py  service.py  welcome_service.py
backend/apps/email_worker/email_worker/templates/: weekly_update.html  welcome.html
backend/apps/email_worker/email_worker/utils/: email_sender.py
backend/apps/notifications/: .env.example  README.md  pyproject.toml
backend/apps/notifications/src/: main.py
backend/apps/notifications/src/common/: authorization.py  brokers.py  client.py  databases.py  dependencies.py  repositories.py  schemas.py  services.py
backend/apps/notifications/src/emails/: dependencies.py  jinja2.py  schemas.py  services.py
backend/apps/notifications/src/emails/api/v1/: router.py
backend/apps/notifications/src/integrations/auth/: schemas.py
backend/apps/notifications/src/integrations/common/: client.py
backend/apps/notifications/src/notifications/: dependencies.py  services.py
backend/apps/notifications/src/notifications/api/v1/: routers.py
backend/apps/notifications/src/settings/: app.py  auth.py  base.py  integration.py  jinja2.py  kafka.py  logging.py  mongo.py  notification.py  rabbitmq.py  rate_limiter.py  redis.py  service.py
backend/apps/notifications/src/users/: schemas.py  services.py
backend/apps/notifications/src/websockets/: dependencies.py  schemas.py  services.py
backend/apps/notifications/src/websockets/api/v1/: router.py
backend/apps/notifications/src/ws_events/: dependencies.py  schemas.py  services.py
backend/apps/notifications/templates/: welcome.html
backend/apps/websockets/: .env.example  pyproject.toml
backend/apps/websockets/src/: main.py
backend/apps/websockets/src/api/v1/: rabbit.py  websockets.py
backend/apps/websockets/src/configs/: settings.py
backend/apps/websockets/src/queue_router/: common.py  interface.py
backend/apps/websockets/src/schemas/: in_events.py  jwt.py  out_events.py
backend/apps/websockets/src/services/: interfaces.py  rabbit_service.py  websocket_service.py
docker/: dev.yaml  elk.yaml
(+16 files in other folders)
