[tool.poetry]
name = "email-admin"
version = "0.1.0"
description = ""
authors = ["paveleroshkinweb <eroshkin321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
# fastapi = "^0.104.1"
# pydantic = { version = "~1.10", extras = ["dotenv"] }
# uvicorn = "^0.24.0.post1"
# asynch = "^0.2.2"
# typer = "^0.9.0"
# aiokafka = "^0.8.1"
fastapi = "^0.104.1"
pydantic = "^2.5.1"
uvicorn = "^0.24.0.post1"
aiokafka = "^0.8.1"
redis = "^5.0.1"
python-jose = "^3.3.0"
jinja2 = "^3.1.2"
gunicorn = "^21.2.0"
httpx = "^0.25.1"
pydantic-settings = "^2.1.0"
motor = "^3.3.2"
fastapi-pagination = "^0.12.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
