[tool.poetry]
name = "email-aggregator"
version = "0.1.0"
description = ""
authors = ["paveleroshkinweb <eroshkin321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = { version = "~1.10", extras = ["dotenv"] }
uvicorn = "^0.24.0.post1"
asynch = "^0.2.2"
typer = "^0.9.0"
aiokafka = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
