[tool.poetry]
name = "email-worker"
version = "0.1.0"
description = ""
authors = ["nikita zigman <zigman.nikita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aio-pika = "^9.3.0"
sendgrid = "^6.10.0"
jinja2 = "^3.1.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
aiosmtplib = "^3.0.1"
loguru = "^0.7.2"
faststream = {extras = ["rabbit"], version = "^0.2.12"}
tenacity = "^8.2.3"


[tool.poetry.group.dev.dependencies]
aiosmtpd = "^1.4.4.post2"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
