[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["nikita zigman <zigman.nikita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faststream = {extras = ["rabbit"], version = "^0.2.12"}
websockets = "^12.0"
redis = "^5.0.1"
pydantic-settings = "^2.0.3"
loguru = "^0.7.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
